--- a/horas_2023-2/css/styles_csv.css
+++ b/horas_2023-2/css/styles_csv.css
@@ -2,34 +2,64 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f1eaea;
+    background-color: #f8f8f8;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Divide en dos columnas iguales */
+    gap: 20px; /* Espacio entre las columnas */
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.input-section {
     padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+.chart-section {
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
 
 #csv-input {
-    display: block;
     margin: 10px 0;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 label {
     font-weight: bold;
+    display: block;
+    margin-top: 10px;
 }
 
 input[type="text"],
 select,
 input[type="color"] {
     margin: 5px 0;
-    padding: 5px;
-    width: 20%;
+    padding: 10px;
+    width: 100%;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    background-color: #f5f5f5;
+    transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus,
+select:focus,
+input[type="color"]:focus {
+    outline: none;
+    border-color: #3498db;
 }
 
 button {
@@ -39,9 +69,15 @@ button {
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block;
+    margin: 20px auto 10px;
 }
 
-/* Estilos para el contenedor del gráfico */
+button:hover {
+    background-color: #2680c7;
+}
+
 #chart-container {
     margin-top: 20px;
     text-align: center;
@@ -49,17 +85,6 @@ button {
 
 canvas {
     max-width: 100%;
-}
-
-/* Estilos para la sección de entrada de nombres de ejes y tipo de gráfico */
-section {
-    margin-top: 20px;
-}
-
-/* Estilos para la sección de generación de gráfico */
-#chart-options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
 }
