--- a/horas_2023-2/css/styles_lectura_por_consola.css
+++ b/horas_2023-2/css/styles_lectura_por_consola.css
@@ -1,62 +1,20 @@
 body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-	background-color: #f4f4f4;
-	
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
-#titulo_grafico{ 
-	display: flex;
-	justify-content: center;
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    height: 100vh;
 }
 
 #input_section {
-	display: grid;
-	grid-template-columns: 50% 50%;
-	margin: 5px;
-	padding: 0px;
-	background-color: #fff;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    background-color: #f5f5f5;
 }
 
-.separar{
-	margin: 4vh 4vh 0 4vh;
-}
-
-.separar input{
-	margin: 4vh 4vh 4vh 4vh;
-}
-
-#data_form {
-	display: grid;
-	
-}
-
-label {
-	margin-top: 1px;
-	font-weight: bold;
-}
-
-input[type="text"],
-input[type="number"],
-select,
-input[type="color"] {
-	padding: 5px;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	margin-top: 5px;
-}
-
-input[type="button"] {
-	margin: 0 10vh 2vh 10vh;
-	background-color: #007bff;
-	color: #fff;
-	padding: 10px 15px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-}
-
-input[type="button"]:hover {
-	background-color: #0056b3;
+#chart_div {
+    padding: 20px;
 }
