--- a/horas_2023-2/css/index.css
+++ b/horas_2023-2/css/index.css
@@ -1,20 +1,103 @@
-.ingreso {
-    display: flex;
-}
-
-.ingreso ul {
-    list-style: none;
-    padding: 0;
+body, div, h1, h2, h3, p, input, select, button, label {
     margin: 0;
-    display: flex; 
+    padding: 0;
+    border: 0;
 }
 
-.ingreso li {
-    margin-right: 150px; 
+/* Fuente global */
+body {
+    font-family: Arial, sans-serif;
 }
 
-.ingreso a {
-    text-decoration: none;
-    color: #090909;
+/* Fondo de página */
+body {
+    background-color: #f0f0f0;
+}
+
+/* Diseño del contenedor principal */
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 20px; 
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+/* Estilos para la sección de entrada de datos */
+.input-section, .chart-section {
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.input-section label, .chart-section label {
     font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.input-section input[type="file"],
+.input-section input[type="text"],
+.input-section select,
+.input-section input[type="color"],
+.button {
+    margin: 5px 0;
+    padding: 10px;
+    width: 100%;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    transition: border-color 0.3s ease;
+}
+
+.input-section input[type="file"]:focus,
+.input-section input[type="text"]:focus,
+.input-section select:focus,
+.input-section input[type="color"]:focus,
+.button:focus {
+    outline: none;
+    border-color: #3498db;
+}
+
+.button {
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: block;
+    margin: 20px auto 10px;
+    border: none;
+}
+
+.button:hover {
+    background-color: #2680c7;
+}
+
+/* Estilos para la sección del gráfico */
+.chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.chart-container.show-chart {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+canvas {
+    max-width: 100%;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
 }
